[project]
name = "30daychartchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "plotnine>=0.14.5",
    "polars>=1.25.2",
    "pyarrow>=19.0.1",
]

[tool.ruff]
ignore = ["F403"]
